Upgraded to the 1.0 release.

--- a/Client/Index.razor
+++ b/Client/Index.razor
@@ -1,7 +1,7 @@
 @using Tres.Customers.Services
 @using Tres.Customers.Models
 
-@namespace Tres.Customers.Modules
+@namespace Tres.Customers
 @inherits ModuleBase
 @inject ICustomerService CustomerService
 @inject NavigationManager NavigationManager
