--- a/Client/Edit.razor
+++ b/Client/Edit.razor
@@ -2,7 +2,7 @@
 @using Tres.Customers.Services
 @using Tres.Customers.Models
 
-@namespace Tres.Customers.Modules
+@namespace Tres.Customers
 @inherits ModuleBase
 @inject ICustomerService CustomerService
 @inject NavigationManager NavigationManager
